<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/tb_hp_regis_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_ffa200"
        app:title="@string/regis_for_other"
        app:titleTextColor="@color/white" />

    <EditText
        android:id="@+id/regis_for_other_phone"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical"
        android:hint="@string/register_for_other_phone"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <EditText
            android:id="@+id/regis_for_other_code"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center_vertical"
            android:hint="@string/regis_for_other_code"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/regis_for_other_code_image"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:src="@mipmap/ic_launcher"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <EditText
        android:id="@+id/regis_for_other_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical"
        android:hint="@string/register_for_other_pass"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/regis_for_other_password_again"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical"
        android:hint="@string/register_for_other_pass_again"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/regis_for_other_nick"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical"
        android:hint="@string/register_for_other_nick"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <EditText
        android:visibility="gone"
        android:id="@+id/regis_call_phone"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical"
        android:hint="@string/register_call_phone"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/regis_for_other_wx"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical"
        android:hint="@string/register_for_other_wx"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/regis_for_other_zfb"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical"
        android:hint="@string/register_for_other_zfb"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/register_na_btn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/selector_register_button_shape"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="14sp" />
</LinearLayout>