<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/tb_setting_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_ffa200"
        app:title="@string/setting"
        app:titleTextColor="@color/white" />


    <RelativeLayout
        android:id="@+id/setting_icon"
        android:layout_width="match_parent"
        android:layout_height="78dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:text="@string/setting_icon"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/user_icon"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:src="@mipmap/ic_launcher_round" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:gravity="center_vertical"
            android:text="@string/setting_nick"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/setting_nick"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:gravity="center_vertical|end"
            android:text="@string/setting_nick"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/grey" />

    <LinearLayout
        android:id="@+id/setting_phone"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:gravity="center_vertical"
            android:text="@string/setting_phone"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:drawableEnd="@mipmap/right_arrow"
            android:drawablePadding="4dp"
            android:drawableRight="@mipmap/right_arrow"
            android:gravity="center_vertical|end"
            android:text="@string/setting_nick"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/grey" />

    <LinearLayout
        android:id="@+id/setting_rail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:text="@string/setting_rail"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:drawableEnd="@mipmap/right_arrow"
            android:drawablePadding="4dp"
            android:drawableRight="@mipmap/right_arrow"
            android:gravity="center_vertical|end"
            android:text="@string/setting_rail_no"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/grey" />

    <RelativeLayout
        android:id="@+id/setting_phone_more"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:text="@string/setting_phone_more"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:src="@mipmap/right_arrow" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/grey" />

    <RelativeLayout
        android:id="@+id/setting_pass"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:text="@string/setting_pass"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:src="@mipmap/right_arrow" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/grey" />

    <RelativeLayout
        android:id="@+id/setting_zfb"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:text="@string/setting_bind_zfb"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:src="@mipmap/right_arrow" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/grey" />

    <RelativeLayout
        android:id="@+id/setting_wx"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:text="@string/setting_bind_wx"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:src="@mipmap/right_arrow" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/grey" />

    <RelativeLayout
        android:id="@+id/setting_adress"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:text="@string/setting_adress"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:src="@mipmap/right_arrow" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/grey" />

    <TextView
        android:id="@+id/setting_exit_btn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/selector_register_button_shape"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:text="@string/setting_exit"
        android:textColor="@color/white"
        android:textSize="14sp" />

</LinearLayout>