<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/tb_changepass_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_ffa200"
        app:title="@string/change_password"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@null"
                android:ellipsize="end"
                android:hint="@string/change_password_old"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:singleLine="true"
                android:textColor="#909090"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_centerVertical="true"
                android:src="@mipmap/login_pass_img" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@null"
                android:ellipsize="end"
                android:hint="@string/change_password_new"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:singleLine="true"
                android:textColor="#909090"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_centerVertical="true"
                android:src="@mipmap/login_pass_img" />
        </RelativeLayout>

        <Button
            android:id="@+id/change_passbtn_ok"
            android:layout_width="252dp"
            android:layout_height="48dp"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/selector_register_button_shape"
            android:text="@string/change_password_ok"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>